--- a/qcon/qcon-2019.md
+++ b/qcon/qcon-2019.md
@@ -1,8 +1,9 @@
 ## 监控
-
 * [CAT性能优化的实践和思考](./CAT性能优化的实践和思考-梁锦华.pdf)
 * [监控埋点，以终为始](./监控埋点，以终为始-吴其敏.pdf)
 * [饿了么监控体系的演进](./饿了么监控体系的演进-黄杰.pdf)
+
+
 
 ## 金融高频交易
 * [Designing,Building and Testing Deterministic HFT Systems](./Designing,%20Building%20and%20Testing%20Deterministic%20HFT%20Systems-Peter.pdf)
@@ -13,6 +14,151 @@
 * [云时代的Java13及未来版本新特性](./云时代的Java13及未来版本新特性-尹旭.pdf)
 * [你可能不知道的SQL](./你可能不知道的SQL-刘鑫.pdf)
 
+```java  
+
+1 Nullish Coalescing Operators
+a ?? b
+等同于
+a !== undefined && a !== null ? a : b 或 a || b 或 a != null ? a : b
+注意副作用
+a.b.c() != null ? a.b.c() : v
+
+2 Optional Chaining
+a?.b
+等同于
+a !== undefined && a !== null ? a.b : undefined 或 a != null ? a.b : undefined 或 a && a.b
+之前的写法
+a && a.b && a.b.c
+和上面一样注意副作用
+
+等同于下面的java代码
+Optional<C> c = Optional.ofNullable((A)null).map(x -> x.b).map(x -> x.c);
+System.out.println(c.isPresent());
+
+```
+
+```java  
+  int numLetters;
+  switch (day) {
+    case MONDAY: case FRIDAY: case SUNDAY:
+      numLetters = 6;
+      break;
+    case TUESDAY:
+      numLetters = 7;
+      break;
+    case THURSDAY: case SATURDAY:
+      numLetters = 8;
+      break;
+    case WEDNESDAY:
+      numLetters = 9;
+      break;
+    default:
+      throw new UnexpectedDayException(day);
+  }
+  
+  int numLetters = switch (day) {
+    case MONDAY, FRIDAY, SUNDAY -> 6;
+    case TUESDAY -> 7;
+    case THURSDAY, SATURDAY -> 8;
+    case WEDNESDAY -> 9;
+    // No default needed
+  };
+  
+  int numLetters = switch (day) {
+    case MONDAY, FRIDAY, SUNDAY -> 6;
+    case TUESDAY -> 7;
+    case THURSDAY, SATURDAY -> 8;
+    default -> {
+      int len = day.toString().length();
+      yield len;
+    }
+  };
+  
+  String html = "<html>\n" +
+    " <body>\n" +
+    " <p>Hello, world</p>\n" +
+    " </body>\n" +
+    "</html>\n";
+  
+  String html = """
+  ..............<html>
+  ..............    <body>
+  ..............        <p>Hello, world</p>
+  ..............    </body>
+  ..............</html>
+  ..............""";
+  
+  Project Amber
+  Pattern Matching for instanceof
+  @Override
+  public boolean equals(Object o) {
+    return (o instanceof CaseInsensitiveString) && ((CaseInsensitiveString) o).s.equalsIgnoreCase(s);
+  }
+  
+  @Override
+  public boolean equals(Object o) {
+    return (o instanceof CaseInsensitiveString cis) && cis.s.equalsIgnoreCase(s);
+  }
+  
+  String formatted =
+    switch (constant) {
+      case Integer i -> String.format("int %d", i);
+      case Byte b -> String.format("byte %d", b);
+      case Long l -> String.format("long %d", l);
+      case Double d -> String.format("double %f", d);
+      case String s -> String.format("String %s", s);
+      // Short, Boolean, etc
+      default -> "unknown";
+  };
+  
+  Project Loom
+  Fiber 轻量级线程以及支持continuation
+  fiber = continuation + scheduler
+  
+  ThreadPool pool;
+  if (useThreads) {
+    System.out.println("Using thread pool, #threads=" + nthreads);
+    pool = new QueuedThreadPool(nthreads, Math.min(nthreads, 10));
+  } else {
+    System.out.println("Using fibers");
+    pool = new ThreadPool() {
+    
+      @Override
+      public void execute(Runnable command) {
+        FiberScope.background().schedule(command);
+      }
+    };
+  }
+  
+  Project Valhalla
+  final class Point {
+    final int x;
+    final int y;
+  }
+  
+  Point[] pts = header - header1 - x - y - header2 - x - y - header3 - x - y - header4 - x - y
+  
+  inline class Point {
+    int x;
+    int y;
+  }
+  
+  Point[] pts = header - x - y - x - y - x - y - x - y
+  
+```
+
+```java  
+
+with recursive t(n) as (
+        values (1)
+    union all
+        select n + 1 from t where n < 100
+) 
+select sum(n) from t
+
+```
+
+* [演示代码](https://github.com/MarchLiu/qcon2019shanghai)
 
 ## 其他
 * [美团点评万亿级KV存储架构与实践](./美团点评万亿级KV存储架构与实践-齐泽斌.pdf)
