--- a/qcon/qcon-2019.md
+++ b/qcon/qcon-2019.md
@@ -9,6 +9,76 @@
 * [Designing,Building and Testing Deterministic HFT Systems](./Designing,%20Building%20and%20Testing%20Deterministic%20HFT%20Systems-Peter.pdf)
 * [恒生极速交易系统相关的技术架构与应用发展](./恒生极速交易系统相关的技术架构与应用发展-朱金奇.pdf)
 
+```java  
+
+Latency 来源
+Sources of latency
+- Network and OS
+- Any messaging/persistence
+- The core business logic
+- Garbage collection
+
+The less you do the faster it will
+be. Your process should only do
+essential work and avoid time
+spent in abstraction.
+
+1. 应用JMH做性能测试
+worst       double     BigDecimal
+Average     0.052μS    0.28μS
+1 in 100    0.1μS      0.4μS
+1 in 1000   0.9μS      17μS
+
+2. Give yourself a budget
+e.g. 24 GB/day
+or 1 GB/hour
+=> 1 GC a day
+
+3. 使用lambda 架构
+
+4. 设计幂等服务，每一个同样的输入确保有同样的输出
+5. 可以通过reply事件恢复之前的服务状态
+
+```
+
+```java  
+
+交易所撮合原则：价格优先、时间优先
+
+第一代UFT系统
+
+普通投资者， 数据库交易系统
+行情投资者， 内存交易系统
+
+1. 开发工具，写eclipse plugin，可视化内存数据以及查询。 代码检查，禁止malloc, goto, 一键生成骨架代码
+
+2. 交易单元，数据预先关联
+
+3. 树状组织，缩小查询范围
+
+4，管理内存数据, sqllite virtual talbe,用sql来查询内存数据
+
+5, 按需记录日志
+
+6, 消息排队保证有序
+
+第二代UTF系统
+1. 使用排队机对业务请求排队
+2. 使用组播
+3. 应用FPGA对行情，风控，策略加速
+4. 对交易核心交易API采用CPU加速
+
+对内存访问优化
+1. 连续vs 离散
+2. 数据结构的定义和业务访问顺序一致
+3. 某些数据结构按照缓存线对齐原则
+4. 针对业务特色组织数据结构
+
+低延时网卡优化
+1. 内核旁路（kernal bypass）
+2. 硬件替代软件（offload）
+```
+
 ## js,java,sql新特性
 * [JavaScript的新特性](./JavaScript的新特性-贺师俊.pdf)
 * [云时代的Java13及未来版本新特性](./云时代的Java13及未来版本新特性-尹旭.pdf)
@@ -164,3 +234,85 @@ select sum(n) from t
 * [美团点评万亿级KV存储架构与实践](./美团点评万亿级KV存储架构与实践-齐泽斌.pdf)
 * [Crushing Application Latency with Vert.x](./Crushing%20Application%20Latency%20with%20Vert.x-Paulo.pdf)
 * [Seven Principles of Productive Software Developers](./Seven%20Principles%20of%20Productive%20Software%20Developers-Sebastian%20Daschner.pdf)
+
+```java  
+
+squirrel -> redis cluster
+cellar
+
+squirrel
+
+在redis cluster 基础上增加了外围的一些服务（调度服务，扩容缩容，高可用）并把元数据发送到zookeeper,客户端共享这些元数据做动态切换
+
+实现了redis的同步协议来做跨机房复制，并在kv上增加了机房信息防止循环复制
+
+重构了持久化机制，自动隔离热点key，以及热点key迁移扩容
+
+cellar 使用multi raft做强一致读写
+
+```
+
+```java  
+
+Latency
+
+1. Loosely Couple Components (event bus)
+2. Use Asynchronous Interfaces (non blocking io)
+3. Horizontally Scale from the Start (clustered)
+4. Create an Active/Active Architecture 
+5. Use a BASE instead of ACID Shared Storage
+
+相关的benchmark
+Vert.x: 37,157 req/s
+Jax-RS: 14,493 req/s
+
+Polyglot
+
+graalvm 实现了js版的vert.x 项目名叫es4x, 并且在graalvm上测试，性能和java版的vert.性能相当
+结论
+1. latency is not a problem, it's a symptom
+2. use non-blocking to fully use the CPU
+3. use vert.x ;-)
+4. polyglot is fine;
+5. use graalvm for polyglot JIT optimization.
+5. node can be slow for server application.
+6. use ES4X
+
+```
+
+```
+const cluster = require('cluster'),
+numCPUs = require('os').cpus().length,
+express = require('express');
+if (cluster.isMaster) {
+  for (let i = 0; i < numCPUs; i++)
+  cluster.fork();
+} else {
+  const app = module.exports = express();
+  app.get('/plaintext', (req, res) =>
+    res
+    .header('Content-Type', 'text/plain')
+    .send('Hello, World!'));
+}
+
+
+import { Router } from '@vertx/web';
+const app = Router.router(vertx);
+app.get("/plaintext").handler(ctx => {
+  ctx.response()
+  .putHeader("Content-Type", "text/plain")
+  .end('Hello, World!');
+});
+
+```
+
+```java  
+
+1. Embrace automation (shortcuts unix shell , zsh , alias; 自动化测试，持续交付)
+2. Focus & eliminate context switches (不用鼠标 ，vim, 买个好耳机， 选一个好工作环境)
+3. Take a step back and reflect(长期投资: test, 自动化，shortcuts, 基础工具)
+4. Don’t make me think (twice) (写好文档， 做好当天的todolist)
+5. Know your craft(读文档， 交流， 写文档， 分享知识)
+6. Use the saved time to relax
+
+```
