--- a/qcon/qcon-2019.md
+++ b/qcon/qcon-2019.md
@@ -3,7 +3,108 @@
 * [监控埋点，以终为始](./监控埋点，以终为始-吴其敏.pdf)
 * [饿了么监控体系的演进](./饿了么监控体系的演进-黄杰.pdf)
 
+```java  
+CAT 在携程
+- 7W+客户端 
+- 消息树：8,000亿消息/天，900TB/天，峰值流量 3,000万消息/秒 
+- 日志：40,000亿行/天，900TB/天，峰值流量 1.5亿行/秒
 
+CAT性能优化
+
+线程模型演进 
+1. 线程模型优化 数据队列和线程绑定， 无锁更新 （类似咱们的pipeline）有数据分布不均的问题
+2. 增加了线程和队列， 上下文切换频繁， 处理能力反而下降
+3. 多个队列共享一个selector， 由selector调用线程池。
+
+- 队列和线程解耦 
+  - 多队列 
+    - 均衡数据 
+    - 减少单个队列的锁竞争 
+  - CPU核数个线程 
+    - 减少上下文切换 
+    - 提供更灵活的调度策略
+    
+数据处理演进
+客户端承担一定的计算
+1. 不变的逻辑
+2. 占用cpu比较多的逻辑
+3. 合并多条数据一次发送
+
+GC处理演进
+- 尽量少分配内存 
+- 是否可以复用内存
+
+字符串优化
+BytesHashMap<V> implements Map<byte[], V>{
+
+}
+```
+
+```java  
+
+故障影响 = 故障影响面 * 故障发生的概率 * 故障持续的时长
+
+Transaction t = Cat.newTransaction("URL", "/cat/r/t");
+t.addData("module", r); // 附加的kv pair
+// 事件
+Cat.logEvent("URL.Server", "localhost", "...")
+Cat.logEvent("URL.Method", "GET", "...")
+
+try {
+  doSomething();
+  t.success();
+} catch(Exception e) {
+  t.setStatus(e);
+} finally {
+  t.complete();
+}
+
+基于注解埋点
+
+@CatTransaction(type = "user login", name = "user pwd login", keys = "username", values = "${arg0}")
+public void login(String username, String pwd) throws LoginException {
+
+}
+
+常见的埋点位置
+API
+RPC
+MQ
+Job
+Http call
+DAL (data access layer)
+Cache
+```
+
+```java  
+
+饿了么监控现状
+1. 覆盖了饿了么所有的监控 （业务监控，全链路监控，PaaS，IaaS等）
+2. 覆盖所有应用及服务器
+3. 每天采集原始数据 800T
+4. 高峰计算事件 7000W/s
+
+遇到的问题
+多套监控系统，包括收集可视化
+各种上下文切换
+
+EMonitor/LinDB
+
+一套系统覆盖所有监控，支持多平台
+
+定制dashboard
+一键搜索
+
+整体架构
+1. Pipeline -> Lambda
+2. 支持多IDC
+3. 全量日志，通过指标+采样的方式
+4. 支持 Java/Golang/Python/PHP/C++/Node.js
+5. 所有监控数据计算窗口为 10S
+6. 自研 + 开源组件构建了整套系统
+```
+
+[lindb](https://github.com/lindb/lindb)
 
 ## 金融高频交易
 * [Designing,Building and Testing Deterministic HFT Systems](./Designing,%20Building%20and%20Testing%20Deterministic%20HFT%20Systems-Peter.pdf)
